WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
160265
Captions do not render in PiP window when element is hidden
https://bugs.webkit.org/show_bug.cgi?id=160265
Summary
Captions do not render in PiP window when element is hidden
Eric Carlson
Reported
2016-07-27 13:33:39 PDT
Video from an element with 'visibility:hidden' renders in the PiP window, but captions do not.
Attachments
Proposed patch.
(3.45 KB, patch)
2016-07-27 13:46 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2016-07-27 13:34:01 PDT
<
rdar://problem/27556788
>
Eric Carlson
Comment 2
2016-07-27 13:46:23 PDT
Created
attachment 284724
[details]
Proposed patch.
Radar WebKit Bug Importer
Comment 3
2016-07-27 13:47:07 PDT
<
rdar://problem/27575156
>
Eric Carlson
Comment 4
2016-07-27 14:47:48 PDT
Simon and I talked about how to make this testable. Filed
https://bugs.webkit.org/show_bug.cgi?id=160271
for that work.
WebKit Commit Bot
Comment 5
2016-07-27 15:07:40 PDT
Comment on
attachment 284724
[details]
Proposed patch. Clearing flags on attachment: 284724 Committed
r203799
: <
http://trac.webkit.org/changeset/203799
>
WebKit Commit Bot
Comment 6
2016-07-27 15:07:45 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 7
2016-08-02 15:00:23 PDT
Re-opened since this is blocked by
bug 160467
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug