Captions do not render in PiP window when element is hidden https://bugs.webkit.org/show_bug.cgi?id=160265 <rdar://problem/27556788>

Reviewed by Simon Fraser.

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlTextTrackContainerElement::createTextTrackRepresentationImage): Pass new flag so
caption layers are always rendered.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintLayerContents): Paint non-visible layers when PaintLayerIgnoreVisibility
flag is set.
* rendering/RenderLayer.h: Define PaintLayerIgnoreVisibility.


Canonical link: https://commits.webkit.org/178427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203799 268f45cc-cd09-0410-ab3c-d52691b4dbfc